<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/view_team_chatButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp"
        android:text="Chat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerLayout" />

    <Button
        android:id="@+id/view_team_invPlayerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:text="Invite Players"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerLayout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/playerLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/playersRecyclerView"
            android:layout_width="385dp"
            android:layout_height="450dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/playerCountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="145dp"
        android:layout_marginEnd="40dp"
        android:text="4/12"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/navbarBg7"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/navbarDivider2"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_marginBottom="22dp"
        android:background="#4D4E4E"
        app:layout_constraintBottom_toTopOf="@id/view_team_homePageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/homePgIconSelector2"
        android:layout_width="45dp"
        android:layout_height="2dp"
        android:layout_marginStart="133dp"
        android:layout_marginBottom="18dp"
        android:background="#6558F5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/view_team_homePageButton"
        android:layout_width="69dp"
        android:layout_height="56dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="22dp"
        android:background="#00FFFFFF"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="Home Button"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_home"
        app:tint="#000000" />

    <ImageButton
        android:id="@+id/view_team_teamPageButton"
        android:layout_width="69dp"
        android:layout_height="56dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="22dp"
        android:background="#00FFFFFF"
        android:contentDescription="Team Page Button"
        android:scaleType="fitCenter"
        app:tint="#6558F5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/view_team_homePageButton"
        app:srcCompat="@drawable/ic_teams" />

    <ImageButton
        android:id="@+id/view_team_profilePageButton"
        android:layout_width="69dp"
        android:layout_height="56dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="22dp"
        android:background="#00FFFFFF"
        android:contentDescription="Profile Page Button"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/view_team_teamPageButton"
        app:srcCompat="@drawable/ic_profile" />

    <ImageButton
        android:id="@+id/view_team_settingsPageButton"
        android:layout_width="69dp"
        android:layout_height="56dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="22dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="Settings Page Button"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/settings"
        app:tint="#4D4E4E" />

    <TextView
        android:id="@+id/teamNameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Team Name"
        android:textColor="#000000"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/teamLocationView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="Location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teamNameView" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="Player List"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/teamLocationView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/invite_layout"
        android:layout_width="match_parent"
        android:layout_height="905dp"
        android:layout_marginTop="915dp"
        android:clickable="true"
        android:elevation="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/invite_usernameSearch"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:elevation="1dp"
            app:endIconDrawable="@drawable/search_icon"
            app:endIconMode="custom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/invite_border">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Search by username"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/invite_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_gray_bg"
            android:backgroundTint="#DCDCDC"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/invite_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:background="#00FFFFFF"
            android:text="Cancel"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/invite_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="Invite Players"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/invite_border"
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_marginTop="12dp"
            android:background="#232323"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/invite_title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/invite_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/invite_usernameSearch" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/view_team_challengeBtn"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#6200ED"
        android:contentDescription="Challenge Button"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/swords_icon"
        app:tint="#FFFFFF" />

    <ImageButton
        android:id="@+id/view_team_backBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:background="#00FFFFFF"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/chevron_left" />

    <Button
        android:id="@+id/view_team_matchHistoryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="Match History"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_team_invPlayerButton" />

    <ImageButton
        android:id="@+id/view_team_editTeamBtn"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#6200ED"
        android:contentDescription="Edit Team Button"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_team_challengeBtn"
        app:srcCompat="@drawable/edit"
        app:tint="#FFFFFF" />

</androidx.constraintlayout.widget.ConstraintLayout>