<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout5"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <View
        android:id="@+id/teams_items_bg"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="#888FB1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/teams_items_enterBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="10dp"
        android:text="Enter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/teams_items_teamName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="14dp"
        android:text="TextView"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/teams_items_teamLocation"
        android:layout_width="100dp"
        android:layout_height="16dp"
        android:layout_marginTop="14dp"
        android:text="Location"
        app:layout_constraintStart_toStartOf="@+id/teams_items_teamName"
        app:layout_constraintTop_toBottomOf="@+id/teams_items_teamName" />

    <TextView
        android:id="@+id/teams_items_playerCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Count"
        app:layout_constraintEnd_toEndOf="@+id/teams_items_enterBtn"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>