...
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Pickup Match Details"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/pickupview_backBtn"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/pickupview_backBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="#00FFFFFF"
        android:contentDescription="Back Button"
        android:scaleType="fitCenter"
        android:src="@drawable/chevron_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="#000000" />

...
